<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".ProfileScreen">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_btnwhite"
        android:contentDescription="@string/back_btn"/>

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile"
        android:contentDescription="@string/profile_picture"/>

    <EditText
        android:id="@+id/user_name"
        android:layout_width="221dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/user"
        android:autofillHints="username"
        android:inputType="text"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/dark_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture" />

    <EditText
        android:id="@+id/user_mail"
        android:layout_width="221dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/e_mail"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/dark_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="221dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/password"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/dark_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_mail" />
    <EditText
        android:id="@+id/user_confirm_password"
        android:layout_width="221dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:autofillHints="confirmPassword"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/dark_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_password" />

    <Button
        android:id="@+id/update_button"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/green"
        android:text="@string/save"
        android:textSize="17sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_confirm_password" />

    <TextView
        android:id="@+id/delete_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:text="@string/delete_profile"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_button" />

    <FrameLayout
        android:id="@+id/frame_delete_profile_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_opaque"
        android:visibility="gone"/>

    <FrameLayout
        android:id="@+id/frame_delete_profile"
        android:layout_width="340dp"
        android:layout_height="190dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/text_confirm"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:padding="14dp"
            android:text="@string/confirm_delete"
            android:textSize="17sp"
            android:textAlignment="center"
            android:textColor="@color/dark_white"/>

        <TextView
            android:id="@+id/button_confirm"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="120dp"
            android:layout_marginStart="40dp"
            android:padding="12dp"
            android:elevation="5dp"
            android:text="@string/delete"
            android:textSize="17sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:backgroundTint="@color/light_red"
            android:background="@drawable/rounded_corner"
            app:layout_constraintTop_toBottomOf="@+id/text_confirm"/>

        <TextView
            android:id="@+id/button_cancel"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="120dp"
            android:layout_marginStart="200dp"
            android:padding="12dp"
            android:elevation="5dp"
            android:text="@string/cancel"
            android:textSize="17sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue"
            android:background="@drawable/rounded_corner"
            app:layout_constraintTop_toBottomOf="@+id/button_confirm" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>