<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".LoginScreen">

    <ImageView
        android:layout_width="301dp"
        android:layout_height="101dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/logowriten"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/login_screen_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_screen_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="36dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/user_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/user_mail"
        android:layout_width="221dp"
        android:layout_height="49dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/e_mail"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/dark_white"
        app:layout_constraintTop_toBottomOf="@id/login_screen_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress_login"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_password" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="221dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/password"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/dark_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_mail" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/blue"
        android:text="@string/login"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_password"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/text_signup"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="90dp"
        android:text="@string/create_account_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_password"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/text_version"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginBottom="50dp"
        android:text="@string/app_version"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>