<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corner"
    android:layout_marginTop="16dp"
    android:padding="16dp"
    android:elevation="2dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/vehicle_picture"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vehicle_picture_white" />

    <TextView
        android:id="@+id/vehicle_name"
        android:layout_width="260dp"
        android:layout_height="26dp"
        android:layout_marginStart="70dp"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/vehicle_name_text"
        android:textStyle="bold"
        android:textColor="@color/dark_white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/vehicle_picture"
        app:layout_constraintTop_toTopOf="@+id/vehicle_picture" />

    <TextView
        android:id="@+id/vehicle_brand"
        android:layout_width="260dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/vehicle_brand_text"
        android:textColor="@color/dark_white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/vehicle_name"
        app:layout_constraintStart_toStartOf="@+id/vehicle_name"
        app:layout_constraintTop_toBottomOf="@+id/vehicle_name" />

    <TextView
        android:id="@+id/vehicle_age"
        android:layout_width="100dp"
        android:layout_height="22dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:text="@string/vehicle_age"
        android:textColor="@color/dark_white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vehicle_brand"
        app:layout_constraintTop_toBottomOf="@+id/vehicle_brand" />
    
</androidx.constraintlayout.widget.ConstraintLayout>